--- a/style.css
+++ b/style.css
@@ -356,7 +356,7 @@ padding : 0;
 .bg {
 
 height: 100%;
-background-color: black;
+background-color: #292929;
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
