--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@
   font-family: Arial, Helvetica, sans-serif;
   
   color: white;
-  background-color: var(--secondary);
+  background-color: black;
 }
 
 /* make range slider fit better with style of site (rip firefox)*/
@@ -113,9 +113,9 @@ input[type=range]::-webkit-slider-thumb { margin-top: -5px; }
 
     font-size: 13px;
     font-family: Arial, Helvetica, sans-serif;
-    
+    background-color:black;
     color: white;
-    background-color: var(--secondary);
+    background-color: black;
 }
 
 .question-button{
@@ -291,7 +291,7 @@ textarea:focus, input:focus{
 .square{
   width: 200px;
   height: 200px;
-  background-color: var(--secondary);
+  background-color: black;
 
   padding: 30px;
   margin: 20px;
