--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
   color: white;
   transform: translate(-50%,-50%);
   -ms-transform: translate(-50%,-50%);
-  background-color: var(--primary);
+  background-color: black;
 
   font-family: Arial, Helvetica, sans-serif;
 
